--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<div class="row">
 							<div class="col-4 col-12-mobile" style="width: 50%;">
 									<article class="item">
-									<a href="https://github.com/Mark-Bugden/League-of-Legends-Win-Prediction" class="image fit portf" target="_blank"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/Mark-Bugden/League-of-Legends-Win-Prediction" class="image fit portf" target="_blank"><img src="images/LOL.png" alt="" /></a>
 									<header>
 										<h3 class="portf">League of Legends Win Prediction</h3>
 										<h3 class="ports">MACHINE LEARNING &#9679; API &#9679; CLUSTERING</h3>
