--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 							I am proficient in Python and the usual datascience packages, including Tensorflow, Seaborn, 
 							Pandas, Matplotlib, and Numpy. I am also familiar with common mathematical and typesetting software such as Mathematica, Maple, Matlab, and LaTeX.
 							</p>
-							<a href="#"><img src="images/Blackboard1.jpg" alt="" width="800" /></a>
+							<a href="#"><img src="images/Blackboard.jpg" alt="" width="800" /></a>
 							<p>
 							You can find more information about the academic side of my career at my 
 							<a href="https://mark-bugden.com/" target="_blank">personal webpage</a>.
