Added Zombies as a new page in Github pages

--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
 									</header>-->
 									<p style="text-align:left;font-size:18px"></p>
 								</article>
-								
 								<article class="item">
-									<a href="https://github.com/Mark-Bugden/Zombie-modelling" class="image fit portf" target="_blank"><img src="images/zombietextbook.png" alt="" /></a>
+									<a href="https://mark-bugden.github.io/zombies.html" class="image fit portf" target="_blank"><img src="images/zombietextbook.png" alt="" /></a>
 									<header>
 										<h3 class="portf">Mathematical Modelling of Zombie Outbreak</h3>
 										<h3 class="ports">MATHEMATICAL MODELLING &#9679; DATA VISUALISATION &#9679; PDEs</h3>
