--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">G'day, I'm <strong>Mark!</strong> </h2>
+								<h2 class="alt">G'day, I'm <strong>Mark Bugden!</strong> </h2>
 								<p>I am a Data Scientist, Mathematician, Theoretical Physicist, and Researcher. <br>
 								I am currently working at the Max Planck Institute for Animal Behavior.<br />
 								</p>
@@ -100,7 +100,7 @@
 									<p style="text-align:left;font-size:18px"></p>
 								</article>
 								<article class="item">
-									<a href="https://mark-bugden.github.io/zombies.html" class="image fit portf" target="_blank"><img src="images/zombietextbook.png" alt="" /></a>
+									<a href="https://mark-bugden.github.io/zombies/zombies.html" class="image fit portf"><img src="images/zombietextbook.png" alt="" /></a>
 									<header>
 										<h3 class="portf">Mathematical Modelling of Zombie Outbreak</h3>
 										<h3 class="ports">MATHEMATICAL MODELLING &#9679; DATA VISUALISATION &#9679; PDEs</h3>
