--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar64"><img src="images/portrait.jpg" alt="" /></span>
+							<span class="image avatar64"><img src="../images/portrait.jpg" alt="" /></span>
 							<h1 id="title">Mark Bugden</h1>
 							<p>Research Scientist</p>
 						</div>
