--- a/zombies/zombies.html
+++ b/zombies/zombies.html
@@ -9,8 +9,8 @@
 		<title>Mark Bugden</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/hopf.png">
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="icon" href="../images/hopf.png">
 	</head>
 	<body class="is-preload">
 
@@ -21,7 +21,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar64"><img src="images/portrait.jpg" alt="" /></span>
+							<span class="image avatar64"><img src="../images/portrait.jpg" alt="" /></span>
 							<h1 id="title">Mark Bugden</h1>
 							<p>Research Scientist</p>
 						</div>
@@ -30,9 +30,10 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Home</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+<!--								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+-->
 							</ul>
 						</nav>
 
@@ -87,7 +88,7 @@
 						<div class="row">
 							<div class="col-4 col-12-mobile" style="width: 50%;">
 									<article class="item">
-									<a href="https://mark-bugden-league-of-legends-win-prediction-st-app-n96doo.streamlit.app/" class="image fit portf" target="_blank"><img src="images/LOL.png" alt="" /></a>
+									<a href="https://mark-bugden-league-of-legends-win-prediction-st-app-n96doo.streamlit.app/" class="image fit portf" target="_blank"><img src="../images/LOL.png" alt="" /></a>
 									<header>
 										<h3 class="portf">League of Legends Win Prediction</h3>
 										<h3 class="ports">MACHINE LEARNING &#9679; API &#9679; CLUSTERING</h3>
@@ -100,7 +101,7 @@
 									<p style="text-align:left;font-size:18px"></p>
 								</article>
 								<article class="item">
-									<a href="https://mark-bugden.github.io/zombies.html" class="image fit portf"><img src="images/zombietextbook.png" alt="" /></a>
+									<a href="https://mark-bugden.github.io/zombies.html" class="image fit portf"><img src="../images/zombietextbook.png" alt="" /></a>
 									<header>
 										<h3 class="portf">Mathematical Modelling of Zombie Outbreak</h3>
 										<h3 class="ports">MATHEMATICAL MODELLING &#9679; DATA VISUALISATION &#9679; PDEs</h3>
@@ -127,7 +128,7 @@
 							
 							<div class="col-4 col-12-mobile" style="width: 50%;">
 									<article class="item">
-									<a href="https://github.com/Mark-Bugden/Fish-Physics" class="image fit portf" target="_blank"><img src="images/Fish.png" alt="" /></a>
+									<a href="https://github.com/Mark-Bugden/Fish-Physics" class="image fit portf" target="_blank"><img src="../images/Fish.png" alt="" /></a>
 									<header>
 										<h3 class="portf">Fish Physics</h3>
 										<h3 class="ports">MACHINE LEARNING &#9679; PHYSICS INFORMED NEURAL NETWORK &#9679; PDEs</h3>
@@ -135,7 +136,7 @@
 									</article>
 								
 									<article class="item">
-										<a href="https://github.com/Mark-Bugden/Locust-Physics" class="image fit portf" target="_blank"><img src="images/Locusts.png" alt="" /></a>
+										<a href="https://github.com/Mark-Bugden/Locust-Physics" class="image fit portf" target="_blank"><img src="../images/Locusts.png" alt="" /></a>
 										<header>
 											<h3 class="portf">Locust Physics</h3>
 											<h3 class="ports">MACHINE LEARNING &#9679; PHYSICS INFORMED NEURAL NETWORK &#9679; PDEs</h3>
@@ -225,7 +226,7 @@
 							I am proficient in Python and the usual datascience packages, including Tensorflow, Seaborn, 
 							Pandas, Matplotlib, and Numpy. I am also familiar with common mathematical and typesetting software such as Mathematica, Maple, Matlab, and LaTeX.
 							</p>
-							<a href="#"><img src="images/Blackboard.jpg" alt="" width="800" /></a>
+							<a href="#"><img src="../images/Blackboard.jpg" alt="" width="800" /></a>
 							<p>
 							You can find more information about the academic side of my career at my 
 							<a href="https://mark-bugden.com/" target="_blank">personal webpage</a>.
