--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/mark-bugden/" class="icon brands fa-linkedin" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);" target="_blank"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/mark-bugden/" class="icon brands fa-linkedin" style="-webkit-tap-highlight-color: rgb(0, 0, 255);" target="_blank"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/Mark-Bugden" class="icon brands fa-github" target="_blank"><span class="label" >Github</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#end" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -283,8 +283,9 @@
 						</div>
 					</section>
 			</div>
-
+			<a name="end"></a>
 		<!-- Footer -->
+
 			<div id="footer">
 
 				<!-- Copyright -->
