--- a/zombies/zombies.html
+++ b/zombies/zombies.html
@@ -45,7 +45,7 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/mark-bugden/" class="icon brands fa-linkedin" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);" target="_blank"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/Mark-Bugden" class="icon brands fa-github" target="_blank"><span class="label" >Github</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://mark-bugden.github.io./#end" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
