Updated images to avif

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar64"><img src="../images/portrait.jpg" alt="" /></span>
+							<span class="image avatar64"><img src="images/portrait.jpg" alt="" /></span>
 							<h1 id="title">Mark Bugden</h1>
 							<p>Research Scientist</p>
 						</div>
@@ -225,7 +225,7 @@
 							I am proficient in Python and the usual datascience packages, including Tensorflow, Seaborn, 
 							Pandas, Matplotlib, and Numpy. I am also familiar with common mathematical and typesetting software such as Mathematica, Maple, Matlab, and LaTeX.
 							</p>
-							<a href="#"><img src="images/Blackboard.jpg" alt="" width="800" /></a>
+							<a href="#"><img src="images/Blackboard.avif" alt="" width="800" /></a>
 							<p>
 							You can find more information about the academic side of my career at my 
 							<a href="https://mark-bugden.com/" target="_blank">personal webpage</a>.
