--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/hopf.png">
+		<link rel="icon" href="images/hopf.avif">
 	</head>
 	<body class="is-preload">
 
@@ -21,7 +21,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar64"><img src="images/portrait.jpg" alt="" /></span>
+							<span class="image avatar64"><img src="images/portrait.avif" alt="" /></span>
 							<h1 id="title">Mark Bugden</h1>
 							<p>Research Scientist</p>
 						</div>
@@ -87,7 +87,7 @@
 						<div class="row">
 							<div class="col-4 col-12-mobile" style="width: 50%;">
 									<article class="item">
-									<a href="https://mark-bugden-league-of-legends-win-prediction-st-app-n96doo.streamlit.app/" class="image fit portf" target="_blank"><img src="images/LOL.png" alt="" /></a>
+									<a href="https://mark-bugden-league-of-legends-win-prediction-st-app-n96doo.streamlit.app/" class="image fit portf" target="_blank"><img src="images/LOL.avif" alt="" /></a>
 									<header>
 										<h3 class="portf">League of Legends Win Prediction</h3>
 										<h3 class="ports">MACHINE LEARNING &#9679; API &#9679; CLUSTERING</h3>
@@ -100,7 +100,7 @@
 									<p style="text-align:left;font-size:18px"></p>
 								</article>
 								<article class="item">
-									<a href="https://mark-bugden.github.io/zombies/zombies.html" class="image fit portf"><img src="images/zombietextbook.png" alt="" /></a>
+									<a href="https://mark-bugden.github.io/zombies/zombies.html" class="image fit portf"><img src="images/zombietextbook.avif" alt="" /></a>
 									<header>
 										<h3 class="portf">Mathematical Modelling of Zombie Outbreak</h3>
 										<h3 class="ports">MATHEMATICAL MODELLING &#9679; DATA VISUALISATION &#9679; PDEs</h3>
@@ -127,7 +127,7 @@
 							
 							<div class="col-4 col-12-mobile" style="width: 50%;">
 									<article class="item">
-									<a href="https://github.com/Mark-Bugden/Fish-Physics" class="image fit portf" target="_blank"><img src="images/Fish.png" alt="" /></a>
+									<a href="https://github.com/Mark-Bugden/Fish-Physics" class="image fit portf" target="_blank"><img src="images/Fish.avif" alt="" /></a>
 									<header>
 										<h3 class="portf">Fish Physics</h3>
 										<h3 class="ports">MACHINE LEARNING &#9679; PHYSICS INFORMED NEURAL NETWORK &#9679; PDEs</h3>
@@ -135,7 +135,7 @@
 									</article>
 								
 									<article class="item">
-										<a href="https://github.com/Mark-Bugden/Locust-Physics" class="image fit portf" target="_blank"><img src="images/Locusts.png" alt="" /></a>
+										<a href="https://github.com/Mark-Bugden/Locust-Physics" class="image fit portf" target="_blank"><img src="images/Locusts.avif" alt="" /></a>
 										<header>
 											<h3 class="portf">Locust Physics</h3>
 											<h3 class="ports">MACHINE LEARNING &#9679; PHYSICS INFORMED NEURAL NETWORK &#9679; PDEs</h3>
