Updates to include Doctor Who blog post

--- a/portfolio/zombies.html
+++ b/portfolio/zombies.html
@@ -1,82 +1,99 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Prologue by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Mark Bugden</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../assets/css/main.css" />
-		<link rel="icon" href="../images/Hopf.avif">
-	</head>
-	<body class="is-preload">
+  <head>
+    <title>Mark Bugden</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="../assets/css/main.css" />
+    <link rel="icon" href="../images/Hopf.avif" />
+  </head>
+  <body class="is-preload">
+    <!-- Header -->
+    <div id="header">
+      <div class="top">
+        <!-- Logo -->
+        <div id="logo">
+          <span class="image avatar64"
+            ><img src="../images/portrait.jpg" alt=""
+          /></span>
+          <h1 id="title">Mark Bugden</h1>
+          <p>Machine Learning Scientist</p>
+        </div>
 
-		<!-- Header -->
-			<div id="header">
-
-				<div class="top">
-
-					<!-- Logo -->
-						<div id="logo">
-							<span class="image avatar64"><img src="../images/portrait.jpg" alt="" /></span>
-							<h1 id="title">Mark Bugden</h1>
-							<p>Research Scientist</p>
-						</div>
-
-					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="https://mark-bugden.github.io./"><span class="icon solid fa-home">Home</span></a></li>
-<!--								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+        <!-- Nav -->
+        <nav id="nav">
+          <ul>
+            <li>
+              <a href="../index.html"
+                ><span class="icon solid fa-home">Home</span></a
+              >
+            </li>
+            <!--								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 -->
-							</ul>
-						</nav>
+          </ul>
+        </nav>
+      </div>
 
-				</div>
+      <div class="bottom">
+        <!-- Social Icons -->
+        <ul class="icons">
+          <li>
+            <a
+              href="https://www.linkedin.com/in/mark-bugden/"
+              class="icon brands fa-linkedin"
+              style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)"
+              target="_blank"
+              ><span class="label">LinkedIn</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/Mark-Bugden"
+              class="icon brands fa-github"
+              target="_blank"
+              ><span class="label">Github</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://mark-bugden.github.io./#end"
+              class="icon solid fa-envelope"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
 
-				<div class="bottom">
+    <!-- Main -->
+    <div id="main">Blog post coming soon!</div>
 
-					<!-- Social Icons -->
-						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/mark-bugden/" class="icon brands fa-linkedin" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);" target="_blank"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/Mark-Bugden" class="icon brands fa-github" target="_blank"><span class="label" >Github</span></a></li>
-							<li><a href="https://mark-bugden.github.io./#end" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
+    <!-- Footer -->
+    <div id="footer">
+      <!-- Copyright -->
+      <ul class="copyright">
+        <li>&copy; Mark Bugden. All rights reserved.</li>
+        <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+      </ul>
+    </div>
 
-				</div>
-
-			</div>
-
-		<!-- Main -->
-			<div id="main">
-                Hello
-			</div>	
-
-				
-
-		<!-- Footer -->
-			<div id="footer">
-
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; Mark Bugden. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
