--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
 								
 								<!-- Project (row 1, column 1) --> 
 								<article class="item">
-									<a href="portfolio/doctorwho.html" class="image fit portf"><img src="images/DW_icon.avif" alt="" /></a>
+									<a href="https://github.com/Mark-Bugden/doctor-who-imdb-analysis" class="image fit portf"><img src="images/DW_icon.avif" alt="" /></a>
 									<header>
 										<h3 class="portf">Directing the Doctor: What drives episode ratings?</h3>
 										<h3 class="ports">DATA WRANGLING &#9679; NARRATIVE ANALYTICS &#9679; VARIANCE ANALYSIS &#9679; VISUALISATION</h3>
 										<div class="project-links">
 											<a href="https://github.com/Mark-Bugden/doctor-who-imdb-analysis" target="_blank">GitHub</a> |
 											<!-- Add this link back in when it is ready
-												<a href="portfolio/doctorwho.html" target="_blank">Blog Post</a>
+												<a class="disabled-link" title="Coming soon">Blog Post</a>
 											-->
-											<a class="disabled-link" title="Coming soon">Blog Post</a>
+											<a href="portfolio/doctorwho.html" target="_blank">Blog Post</a>
 										</div>
 									</header>
 								</article>
@@ -195,7 +195,7 @@
 							
 								<!-- Project (row 2, column 3) -->
 								<article class="item">
-									<a href="portfolio/zombies.html" class="image fit portf"><img src="images/zombietextbook.avif" alt="" /></a>
+									<a href="https://github.com/Mark-Bugden/Zombie-modelling" class="image fit portf"><img src="images/zombietextbook.avif" alt="" /></a>
 									<header>
 										<h3 class="portf">Quantifying the Quarantine: Simulating a zombie outbreak</h3>
 										<h3 class="ports">MATHEMATICAL MODELLING &#9679; DATA VISUALISATION &#9679; PDEs</h3>
