Added Czech Judicial portfolio project

--- a/index.html
+++ b/index.html
@@ -154,12 +154,16 @@
 								
 								<!-- Project (row 2, column 2) -->
 								<article class="item">
-									<a href="" class="image fit portf"><img src="images/WIP.avif" alt="" /></a>
+									<a href="" class="image fit portf"><img src="images/Judicial.avif" alt="" /></a>
 									<header>
-										<h3 class="portf">TBA</h3>
-										<h3 class="ports">Coming soon!</h3>
+										<h3 class="portf">Judging the Journey: Predicting the duration of legal disputes in the Czech Republic</h3>
+										<h3 class="ports">DATA SCRAPING &#9679; FEATURE ENGINEERING &#9679; MACHINE LEARNING &#9679; REGRESSION</h3>
 										<div class="project-links">
-											<a class="disabled-link" title="GitHub">GitHub</a> 
+											<a href="https://github.com/Mark-Bugden/SOUDAI_data_scraping" target="_blank">Data Scraping</a> |
+											<!-- Add this link back in when it is ready
+												<a class="disabled-link" title="Coming soon">Blog Post</a>
+											-->
+											<a href="https://github.com/Mark-Bugden/SOUDAI_model_training" target="_blank">Model Training</a>
 										</div>
 									</header>
 								</article> 
