--- a/portfolio/doctorwho.html
+++ b/portfolio/doctorwho.html
@@ -712,7 +712,7 @@
             several different metrics. The first and most obvious is the
             <span class="accent-text">naïve average</span>
             rating per Doctor across all of their episodes. Although this gives
-            a idea of how positively that Doctor's episodes were rated, it
+            an idea of how positively that Doctor's episodes were rated, it
             doesn't account for vote volume or episode count. The
             <span class="accent-text">vote-weighted average</span> improves on
             this by giving more influence to episodes with more IMDb votes.
