Small update to index.html

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 								
 								<!-- Project (row 2, column 2) -->
 								<article class="item">
-									<a href="" class="image fit portf"><img src="images/Judicial.avif" alt="" /></a>
+									<a href="https://github.com/Mark-Bugden/SOUDAI_data_scraping" class="image fit portf" target="_blank"><img src="images/Judicial.avif" alt="" /></a>
 									<header>
 										<h3 class="portf">Judging the Journey: Predicting the duration of legal disputes in the Czech Republic</h3>
 										<h3 class="ports">DATA SCRAPING &#9679; FEATURE ENGINEERING &#9679; MACHINE LEARNING &#9679; REGRESSION</h3>
